# signage-client

./: Cargo.toml  README.md  install.sh  shell.nix
RPI_endpoint/: Cargo.toml  metrics.json
RPI_endpoint/src/: main.rs
src/: config.rs  data.rs  main.rs  reporting.rs  util.rs
