[package]
name = "signage-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.74"
daemonize = "0.5.0"
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
tokio = { version = "1.31.0", features = ["full"] }
