[package]
name = "RPI_metrics_json_loop_endpoint"
version = "0.1.0"
edition = "2021"

[dependencies]
sysinfo = "0.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
